packages/fb_connector/lib/src/ffi/fb_bindings.dart


  late final _isc_dsql_insertPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_insert');
  late final _isc_dsql_insert = _isc_dsql_insertPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int,
          ffi.Pointer<XSQLDA>)>();

  int isc_dsql_prepare(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_tr_handle> arg1,
    ffi.Pointer<isc_stmt_handle> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
    int arg5,
    ffi.Pointer<XSQLDA> arg6,
  ) {
    return _isc_dsql_prepare(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
    );
  }

  late final _isc_dsql_preparePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_tr_handle>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16,
              ffi.Pointer<XSQLDA>)>>('isc_dsql_prepare');
  late final _isc_dsql_prepare = _isc_dsql_preparePtr.asFunction<
      int Function(
          ffi.Pointer<ISC_STATUS>,
          ffi.Pointer<isc_tr_handle>,
          ffi.Pointer<isc_stmt_handle>,
          int,
          ffi.Pointer<ISC_SCHAR>,
          int,
          ffi.Pointer<XSQLDA>)>();

  int isc_dsql_set_cursor_name(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    ffi.Pointer<ISC_SCHAR> arg2,
    int arg3,
  ) {
    return _isc_dsql_set_cursor_name(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_dsql_set_cursor_namePtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Uint16)>>('isc_dsql_set_cursor_name');
  late final _isc_dsql_set_cursor_name =
      _isc_dsql_set_cursor_namePtr.asFunction<
          int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>,
              ffi.Pointer<ISC_SCHAR>, int)>();

  int isc_dsql_sql_info(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_stmt_handle> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
  ) {
    return _isc_dsql_sql_info(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
    );
  }

  late final _isc_dsql_sql_infoPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_stmt_handle>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_dsql_sql_info');
  late final _isc_dsql_sql_info = _isc_dsql_sql_infoPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_stmt_handle>, int,
          ffi.Pointer<ISC_SCHAR>, int, ffi.Pointer<ISC_SCHAR>)>();

  void isc_encode_date(
    ffi.Pointer<ffi.Void> arg0,
    ffi.Pointer<ISC_QUAD> arg1,
  ) {
    return _isc_encode_date(
      arg0,
      arg1,
    );
  }

  late final _isc_encode_datePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ISC_QUAD>)>>('isc_encode_date');
  late final _isc_encode_date = _isc_encode_datePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ISC_QUAD>)>();

  void isc_encode_sql_date(
    ffi.Pointer<ffi.Void> arg0,
    ffi.Pointer<ISC_DATE> arg1,
  ) {
    return _isc_encode_sql_date(
      arg0,
      arg1,
    );
  }

  late final _isc_encode_sql_datePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ISC_DATE>)>>('isc_encode_sql_date');
  late final _isc_encode_sql_date = _isc_encode_sql_datePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ISC_DATE>)>();

  void isc_encode_sql_time(
    ffi.Pointer<ffi.Void> arg0,
    ffi.Pointer<ISC_TIME> arg1,
  ) {
    return _isc_encode_sql_time(
      arg0,
      arg1,
    );
  }

  late final _isc_encode_sql_timePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ISC_TIME>)>>('isc_encode_sql_time');
  late final _isc_encode_sql_time = _isc_encode_sql_timePtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ISC_TIME>)>();

  void isc_encode_timestamp(
    ffi.Pointer<ffi.Void> arg0,
    ffi.Pointer<ISC_TIMESTAMP> arg1,
  ) {
    return _isc_encode_timestamp(
      arg0,
      arg1,
    );
  }

  late final _isc_encode_timestampPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ISC_TIMESTAMP>)>>('isc_encode_timestamp');
  late final _isc_encode_timestamp = _isc_encode_timestampPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ISC_TIMESTAMP>)>();

  int isc_event_block(
    ffi.Pointer<ffi.Pointer<ISC_UCHAR>> arg0,
    ffi.Pointer<ffi.Pointer<ISC_UCHAR>> arg1,
    int arg2,
  ) {
    return _isc_event_block(
      arg0,
      arg1,
      arg2,
    );
  }

  late final _isc_event_blockPtr = _lookup<
      ffi.NativeFunction<
          ISC_LONG Function(
              ffi.Pointer<ffi.Pointer<ISC_UCHAR>>,
              ffi.Pointer<ffi.Pointer<ISC_UCHAR>>,
              ISC_USHORT)>>('isc_event_block');
  late final _isc_event_block = _isc_event_blockPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ISC_UCHAR>>,
          ffi.Pointer<ffi.Pointer<ISC_UCHAR>>, int)>();

  int isc_event_block_a(
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg0,
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg1,
    int arg2,
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg3,
  ) {
    return _isc_event_block_a(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_event_block_aPtr = _lookup<
      ffi.NativeFunction<
          ISC_USHORT Function(
              ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
              ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
              ISC_USHORT,
              ffi.Pointer<ffi.Pointer<ISC_SCHAR>>)>>('isc_event_block_a');
  late final _isc_event_block_a = _isc_event_block_aPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
          ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
          int,
          ffi.Pointer<ffi.Pointer<ISC_SCHAR>>)>();

  void isc_event_block_s(
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg0,
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg1,
    int arg2,
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg3,
    ffi.Pointer<ISC_USHORT> arg4,
  ) {
    return _isc_event_block_s(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_event_block_sPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
              ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
              ISC_USHORT,
              ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
              ffi.Pointer<ISC_USHORT>)>>('isc_event_block_s');
  late final _isc_event_block_s = _isc_event_block_sPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
          ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
          int,
          ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
          ffi.Pointer<ISC_USHORT>)>();

  void isc_event_counts(
    ffi.Pointer<ISC_ULONG> arg0,
    int arg1,
    ffi.Pointer<ISC_UCHAR> arg2,
    ffi.Pointer<ISC_UCHAR> arg3,
  ) {
    return _isc_event_counts(
      arg0,
      arg1,
      arg2,
      arg3,
    );
  }

  late final _isc_event_countsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ISC_ULONG>,
              ffi.Int16,
              ffi.Pointer<ISC_UCHAR>,
              ffi.Pointer<ISC_UCHAR>)>>('isc_event_counts');
  late final _isc_event_counts = _isc_event_countsPtr.asFunction<
      void Function(ffi.Pointer<ISC_ULONG>, int, ffi.Pointer<ISC_UCHAR>,
          ffi.Pointer<ISC_UCHAR>)>();

  void isc_expand_dpb(
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg0,
    ffi.Pointer<ffi.Int16> arg1,
  ) {
    return _isc_expand_dpb(
      arg0,
      arg1,
    );
  }

  late final _isc_expand_dpbPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
              ffi.Pointer<ffi.Int16>)>>('isc_expand_dpb');
  late final _isc_expand_dpb = _isc_expand_dpbPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Pointer<ISC_SCHAR>>, ffi.Pointer<ffi.Int16>)>();

  int isc_modify_dpb(
    ffi.Pointer<ffi.Pointer<ISC_SCHAR>> arg0,
    ffi.Pointer<ffi.Int16> arg1,
    int arg2,
    ffi.Pointer<ISC_SCHAR> arg3,
    int arg4,
  ) {
    return _isc_modify_dpb(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_modify_dpbPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Pointer<ISC_SCHAR>>,
              ffi.Pointer<ffi.Int16>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>,
              ffi.Int16)>>('isc_modify_dpb');
  late final _isc_modify_dpb = _isc_modify_dpbPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ISC_SCHAR>>, ffi.Pointer<ffi.Int16>,
          int, ffi.Pointer<ISC_SCHAR>, int)>();

  int isc_free(
    ffi.Pointer<ISC_SCHAR> arg0,
  ) {
    return _isc_free(
      arg0,
    );
  }

  late final _isc_freePtr =
      _lookup<ffi.NativeFunction<ISC_LONG Function(ffi.Pointer<ISC_SCHAR>)>>(
          'isc_free');
  late final _isc_free =
      _isc_freePtr.asFunction<int Function(ffi.Pointer<ISC_SCHAR>)>();

  int isc_get_segment(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_blob_handle> arg1,
    ffi.Pointer<ffi.Uint16> arg2,
    int arg3,
    ffi.Pointer<ISC_SCHAR> arg4,
  ) {
    return _isc_get_segment(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
    );
  }

  late final _isc_get_segmentPtr = _lookup<
      ffi.NativeFunction<
          ISC_STATUS Function(
              ffi.Pointer<ISC_STATUS>,
              ffi.Pointer<isc_blob_handle>,
              ffi.Pointer<ffi.Uint16>,
              ffi.Uint16,
              ffi.Pointer<ISC_SCHAR>)>>('isc_get_segment');
  late final _isc_get_segment = _isc_get_segmentPtr.asFunction<
      int Function(ffi.Pointer<ISC_STATUS>, ffi.Pointer<isc_blob_handle>,
          ffi.Pointer<ffi.Uint16>, int, ffi.Pointer<ISC_SCHAR>)>();

  int isc_get_slice(
    ffi.Pointer<ISC_STATUS> arg0,
    ffi.Pointer<isc_db_handle> arg1,
    ffi.Pointer<isc_tr_handle> arg2,
    ffi.Pointer<ISC_QUAD> arg3,
    int arg4,
    ffi.Pointer<ISC_SCHAR> arg5,
    int arg6,
    ffi.Pointer<ISC_LONG> arg7,
    int arg8,
    ffi.Pointer<ffi.Void> arg9,
    ffi.Pointer<ISC_LONG> arg10,
  ) {
    return _isc_get_slice(
      arg0,
      arg1,
      arg2,
      arg3,
      arg4,
      arg5,
      arg6,
      arg7,
      arg8,
      arg9,
      arg10,
    );
  }
